css/style.css
/* ... */
h1,
h2,
h3,
h4,
h5,
h6 {
  font-weight: 300;
  margin: 0px;
}

h1,
.h1 {
  font-size: 44px;
  line-height: 56px;
}

h2,
.h2 {
  font-size: 30px;
  line-height: 35px;
}

h3,
.h3 {
  font-size: 23px;
  line-height: 25px;
}

h4,
.h4 {
  font-size: 20px;
  line-height: 24px;
  font-weight: 400;
}

.mainSection {
  position: relative;
  background-image: url('../images/broken-ac-couple.jpg');
  background-repeat: no-repeat;
  background-size: cover !important;
  background-position: center top !important;
  height: 75vh;
}

.mainSectionHeading {
  font-size: 100%;
  position: relative;
  z-index: 10;
  margin: 10% 30px !important;
}

.overlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 1;
  opacity: 0.3;
  background-color: #000000;
}

.font-size-60 {
  font-size: 60;
}

@media only screen and (max-width: 575px) {
  .mainSection {
    height: 75vh;
  }

  .font-size-60 {
    font-size: 40px !important;
  }

  .font-size-small {
    font-size: 20px !important;
  }

  /* .mainSectionHeading {
    margin: 10px !important;
  } */

  .mainSectionText {
    font-size: 15px !important;
  }
}

@media only screen and (min-width:767px) {
  .mainSectionHeading {
    margin: 160px 50px !important;
  }
}

/* about section */

.separator {
  display: block;
  position: relative;
  width: 10%;
  height: 2px;
  background-color: blue;
  margin-bottom: 40px;
  margin-top: -100px;
  margin-left: auto;
  margin-right: auto;
}

.separator-bottom {
  display: block;
  position: relative;
  width: 10%;
  height: 2px;
  background-color: blue;
  margin-bottom: 50px;
  margin-top: 40px;
  margin-left: auto;
  margin-right: auto;
}

#about {
  background: linear-gradient(rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.8)), url('../images/tourists-2346545_1280.jpg') fixed;
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  height: 100%;
  width: 100%;
}

p {
  font-size: 18px;
  line-height: 25px;
}

ul {
  padding: 0;
  margin: 0;
  list-style: none;
}

.paymentUL {
  list-style: disc;
  /* width: 200px; */
  /* margin-left: 450px; */
  display: inline-block; 
  justify-items: center;
}

.paymentLI {
  margin-left: 0;
}

a {
  transition: all 0.2s ease-in-out 0s;
}

.mt-100 {
  margin-top: 100px;
}

.bg-1 {
  /* background-image: url(../images/call-to-action.jpg); */
  /* background-image: url(../images/truck.JPG); */
  /* background-repeat: no-repeat;
  background-position: center; */
}

.bg-orange {
  background: #f9a743;
}

.bg-opacity {
  position: relative;
}

.bg-opacity:before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: rgba(0, 0, 0, 0.7);
}

a:focus,
.btn:focus,
.btn:active:focus {
  box-shadow: none;
  outline: 0 none;
}

a,
a:active,
a:focus,
a:active {
  text-decoration: none;
}

.section {
  padding: 80px 0;
}

.phoneNumber {
  font-size: 18px;
  padding: 25px 40px;
  background-color: blue;
  color: #fff;
}

.font-size-60 {
  font-size: 60px;
  line-height: 1.2;
}

@media (max-width: 575px) {
  .font-size-60 {
    font-size: 40px;
  }
}

.mb-10 {
  margin-bottom: 10px;
}

.mb-40 {
  margin-bottom: 40px;
}

/*--
    custom heading
--*/

.coupon {
  width: 360px !important;
  height: 149px !important;
}

@media only screen and (max-width: 575px) {
  .coupon {
    width: 330px;
    height: 149px;
  }
}

.text-center {
  text-align: center;
}

.heading {
  text-align: center;
  color: #777777;
  padding-bottom: 70px;
}

.heading h2 {
  color: #3c3c3c;
  padding-bottom: 15px;
  text-transform: capitalize;
  font-weight: 700;
  font-size: 40px;
  line-height: 40px;
}

.heading p {
  font-size: 17px;
  line-height: 24px;
  font-weight: 300;
}

.subheading {
  color: #3c3c3c;
  padding-bottom: 15px;
  text-transform: capitalize;
  font-weight: 500;
  font-size: 32px;
  line-height: 45px;
}

.btn {
  border-radius: 0;
}

.btn-main {
  color: #fff;
  border-radius: 30px;
  font-size: 18px;
  padding: 15px 40px;
  display: inline-block;
  background-color: #f9a743;
  box-shadow: 0 15px 40px rgba(249, 167, 68, 0.5);
  background-image: linear-gradient(bottom, rgba(255, 239, 206, 0) 0%, rgba(255, 239, 206, 0.25) 100%);
}

.btn-main:hover,
.btn-main:focus {
  background-color: #f9a743;
  color: #fff;
}

.btn-main-sm {
  padding: 12px 35px;
  text-transform: uppercase;
  font-size: 14px;
  font-weight: bold;
}

/*Preloader*/
#preloader-wrapper {
  background-color: #fff;
  bottom: auto;
  height: 100%;
  left: auto;
  position: fixed;
  right: auto;
  top: auto;
  width: 100%;
  z-index: 9999;
  display: flex;
  justify-content: center;
  align-items: center;
}

.pre-loader {
  width: 130px;
  height: 130px;
  background: #f9a743;
  border-radius: 50%;
  animation: loading 6s infinite reverse linear;
  position: relative;
  font-family: "themefisher-font" !important;
}

.pre-loader:before {
  content: "\f3bd";
  position: absolute;
  top: 50%;
  left: 50%;
  display: block;
  font-size: 40px;
  -webkit-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  color: #fff;
}
/* ... */

